# unitree_ws

./: .gitignore  README.md  setup.sh  setup_default.sh  setup_local.sh
scripts/simulate_python/: config.py
scripts/simulate_python/test/: hello_world.py  test_unitree_sdk2.py
scripts/unitree_robots/g1/: scene.xml
src/unitree_bringup/: CMakeLists.txt  package.xml
src/unitree_bringup/scripts/: g1_test.py  recording.py
src/unitree_ros2_example/: CMakeLists.txt
src/unitree_ros2_example/src/: read_motion_state.cpp
src/unitree_ros2_example/src/g1/lowlevel/behavior_lib/: motion2.seq
